<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/C346"
        android:textSize="24dp"/>

    <TextView
        android:id="@+id/textView02"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/C206"
        android:textSize="24dp" />

    <TextView
        android:id="@+id/textView03"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/C203"
        android:textSize="24dp" />

    <TextView
        android:id="@+id/textView04"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/C218"
        android:textSize="24dp" />

    <TextView
        android:id="@+id/textView05"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/G953"
        android:textSize="24dp" />

    <TextView
        android:id="@+id/textView06"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/C235"
        android:textSize="24dp" />


</LinearLayout>